--- a/index.html
+++ b/index.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Secret Agent Supply</title>
-    <link rel='stylesheet' type='text/css' href='resources/css/reset.css'>
-    <link rel='stylesheet' type='text/css' href='resources/css/style.css'>
-  </head>
-  <body>
 
-  </body>
+<head>
+  <meta charset="utf-8">
+  <title>Secret Agent Supply</title>
+  <link rel='stylesheet' type='text/css' href='resources/css/reset.css'>
+  <link rel='stylesheet' type='text/css' href='resources/css/style.css'>
+</head>
+
+<body>
+
+  <!-- Company Header -->
+
+  <div class="company">
+    <div class="container">
+      <img src=>
+      <span>SECRET AGENT SUPPLY INC.</span>
+    </div>
+  </div>
+
+
+</body>
+
 </html>
