--- a/index.html
+++ b/index.html
@@ -46,6 +46,44 @@
     </ul>
   </nav>
 
+  <!-- Products and Business Info -->
+
+  <div class="container">
+    <div class="products">
+      <div class="product">
+        <div class="product-image">
+          <img src=>
+        </div>
+          <span class="description">Exploding Pen</span>
+        </div>
+        <div class="product watch">
+          <div class="product-image">
+            <img src=>
+        </div>
+            <span class="description">Cellular Watch</span>
+          </div>
+          <div class="product glasses">
+            <div class="product-image">
+              <img src=>
+        </div>
+              <span class="description">Thermal Glasses</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="container">
+          <div class="business-info">
+            <div class="info">
+              <span class="title">Location</span>
+              <span>-47.346436, 84.32354</span>
+            </div>
+            <div class="info">
+              <span class="title">Hours</span>
+              <span>0800 - 1800</span>
+            </div>
+          </div>
+        </div>
+
 
 </body>
 
