--- a/index.html
+++ b/index.html
@@ -84,6 +84,18 @@
           </div>
         </div>
 
+        <!-- Footer -->
+
+        <footer>
+          <div class="container">
+            Copyright Secret Agent Supply Inc.
+          </div>
+        </footer>
+
+</body>
+
+</html>
+
 
 </body>
 
