--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <div class="company">
     <div class="container">
-      <img src=>
+      <img src="resources\Images\logo.png" alt="A logo of a binocular">
       <span>SECRET AGENT SUPPLY INC.</span>
     </div>
   </div>
@@ -52,19 +52,19 @@
     <div class="products">
       <div class="product">
         <div class="product-image">
-          <img src=>
+          <img src="resources\Images\pen.png" alt="An image of a fancy ballpen">
         </div>
           <span class="description">Exploding Pen</span>
         </div>
         <div class="product watch">
           <div class="product-image">
-            <img src=>
+            <img src="resources\Images\watch.png" alt="An image of a silver Watch, and appears to be made of metal">
         </div>
             <span class="description">Cellular Watch</span>
           </div>
           <div class="product glasses">
             <div class="product-image">
-              <img src=>
+              <img src="resources\Images\glasses.png" alt="">
         </div>
               <span class="description">Thermal Glasses</span>
             </div>
