added an alt for glasses

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           </div>
           <div class="product glasses">
             <div class="product-image">
-              <img src="resources\Images\glasses.png" alt="">
+              <img src="resources\Images\glasses.png" alt="an image of black frame sunglasss">
         </div>
               <span class="description">Thermal Glasses</span>
             </div>
